<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".movie.MovieDetailing">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--        tools:srcCompat="@tools:sample/avatars" />-->

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="205dp"
            android:layout_height="232dp"
            android:contentDescription="@string/movies_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars"
            />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="350dp"
            android:layout_height="21dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_item_genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_item_photo"
            tools:text="@string/movies_title" />

        <TextView
            android:id="@+id/tv_item_genre"
            android:layout_width="350dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:text="@string/movies_genre" />

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="350dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_platform"
            tools:text="@string/movies_rating" />

        <TextView
            android:id="@+id/tv_item_duration"
            android:layout_width="350dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_genre"
            tools:text="@string/movies_duration" />

        <TextView
            android:id="@+id/tv_item_director"
            android:layout_width="350dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_rating"
            tools:text="@string/movies_director" />

        <TextView
            android:id="@+id/tv_item_platform"
            android:layout_width="350dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_year"
            tools:text="@string/movies_platform" />

        <TextView
            android:id="@+id/tv_item_year"
            android:layout_width="350dp"
            android:layout_height="21dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_duration"
            tools:text="@string/movies_year" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="485dp" />

        <include
            layout="@layout/layout_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>